--- a/phishing.html
+++ b/phishing.html
@@ -68,11 +68,11 @@
 
 		<section id="Prepare">
 			<h2>Prepare your Employees</h2>
-			<p>Preparing your employees for a phishing test is essential to ensure that they understand the purpose of the test and are not caught off guard when they receive the simulated phishing email. Make sure that your employees know what actions they should take if they receive a suspected phishing email. This includes reporting it to the IT team, deleting the email, and avoiding clicking on any links or attachments. Create a mailbox for your employees to report suspicious emails. I created phishing@renewvia.com. Then, post a company-wide announcement, for example:</p>
+			<p>Preparing your company's employees for a phishing test is essential to ensure that they understand the purpose of the test and are not caught off guard when they receive the simulated phishing email. Make sure that your company's employees know what actions they should take if they receive a suspected phishing email. This includes reporting it to the IT team, deleting the email, and avoiding clicking on any links or attachments. Create a mailbox for your company's employees to report suspicious emails. I created phishing@renewvia.com. Then, post a company-wide announcement, for example:</p>
 
 			<blockquote>If you receive an email that looks suspicious, and you'd like help identifying if it's a phishing scam, please forward it to phishing@renewvia.com and send me a message. Sometimes, these scams are really convincing, and there's no harm in asking me to test it for you.</blockquote>
 
-			<p>You may also choose to alert your employees that you will be performing a phishing test. When employees are aware that a phishing test is going to take place, they're more likely to take it seriously and make an effort to identify and report any suspicious emails they receive.</p>
+			<p>You may also choose to alert your company's employees that you will be performing a phishing test. When employees are aware that a phishing test is going to take place, they're more likely to take it seriously and make an effort to identify and report any suspicious emails they receive.</p>
 
 			<p>Wait long enough, perhaps a week, after sending the announcement to ensure everyone has had a chance to read and digest the request.</p>
 		</section>
@@ -92,7 +92,7 @@
 
 		<section id="Malware">
 			<h2>Create a "Malware" Website</h2>
-			<p>The next step is to create the website to which your phishing email will link. In my opinion, the easiest way to do this is to use <a rel="external" target="_blank" href="https://pages.github.com/">GitHub Pages</a>. Navigate to <a rel="external" target="_blank" href="https://github.com/">GitHub</a>, sign out of your account if you are already logged in, and click the "Sign Up" button in the top right corner of the page. Follow the instructions to create an account. Note that the username you pick will be included in the URL of the phishing link you send to your employees, so I recommend including your company name in the username (e.g., "renewvia-official").</p>
+			<p>The next step is to create the website to which your phishing email will link. In my opinion, the easiest way to do this is to use <a rel="external" target="_blank" href="https://pages.github.com/">GitHub Pages</a>. Navigate to <a rel="external" target="_blank" href="https://github.com/">GitHub</a>, sign out of your account if you are already logged in, and click the "Sign Up" button in the top right corner of the page. Follow the instructions to create an account. Note that the username you pick will be included in the URL of the phishing link you send to your company's employees, so I recommend including your company name in the username (e.g., "renewvia-official").</p>
 
 			<p>Once you have created your new GitHub account, sign in and click "<a rel="external" target="_blank" href="https://github.com/new">New</a>" to create a new repository. Name your repository "[your username].github.io," where "[your username]" is your GitHub account username (e.g., "renewvia-official.github.io"). Ensure the repository is public and click the "Create repository" button. When GitHub navigates you to the new repository page, click "creating a new file."</p>
 
@@ -189,7 +189,7 @@ message =&gt; console.log(message)
 
 			<p>You may also want to create an internal report about how your company performed as a whole, including a plan to improve awareness and perform periodic testing.</p>
 
-			<p>Conducting phishing tests on your company's employees is a critical step in protecting your company's sensitive information and maintaining its cybersecurity defenses. While hiring third-party providers to conduct these tests can be expensive, you can run them for free using these steps. By preparing your employees, you can help to create a culture of awareness and vigilance around cybersecurity within your organization. By taking these proactive steps, you can minimize the risk of successful phishing attacks and ensure that your company's sensitive information remains secure. Remember, prevention is always better than cure, and the best defense against phishing attacks is an informed and alert workforce.</p>
+			<p>Conducting phishing tests on your company's employees is a critical step in protecting your company's sensitive information and maintaining its cybersecurity defenses. While hiring third-party providers to conduct these tests can be expensive, you can run them for free using these steps. By preparing your company's employees, you can help to create a culture of awareness and vigilance around cybersecurity within your organization. By taking these proactive steps, you can minimize the risk of successful phishing attacks and ensure that your company's sensitive information remains secure. Remember, prevention is always better than cure, and the best defense against phishing attacks is an informed and alert workforce.</p>
 		</section>
 	</main>
 	
