Kenya guide draft

--- a/phishing.html
+++ b/phishing.html
@@ -99,7 +99,7 @@
 			<img class="img-center" alt="Screenshot of a new repository in GitHub" src="blog-posts/phishing-creatinganewphile.jpg">
 
 			<p>Name your new file "index.html" to ensure it will be displayed by the browser when your "malware" site is live. Modify the following HTML script for your company, and copy-paste it into the "Edit new file" input box.</p>
-			<pre>
+			<pre class="overflowable">
 <code>&lt;!DOCTYPE html&gt;
 &lt;html lang="en"&gt;
 &lt;head&gt;
