--- a/phishing.html
+++ b/phishing.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
 	<title>Phishing Prevention on a Budget: How to Test and Train Your Employees for Free</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- SEO Description -->
+	<meta name="author" content="Nicholas S. Selby">
 	<meta name="description" content="Maximize your cybersecurity defenses by conducting free phishing tests on your employees and empowering them to recognize and avoid phishing attempts.">
 	<link rel="canonical" href="https://rupumped.github.io/phishing.html">
 	<script type="application/ld+json">
@@ -25,6 +26,16 @@
 			}]
 		}
 	</script>
+
+	<!-- Open Graph Tags -->
+	<meta property="og:title" content="Phishing Prevention on a Budget: How to Test and Train Your Employees for Free">
+	<meta property="og:description" content="Maximize your cybersecurity defenses by conducting free phishing tests on your employees and empowering them to recognize and avoid phishing attempts.">
+	<meta property="og:image" content="https://rupumped.github.io/blog/phishing.jpg">
+	<meta property="og:image:width" content="1024">
+	<meta property="og:image:height" content="1024">
+	<meta property="og:image:alt" content="A fishhook and an at symbol (@)">
+	<meta property="og:url" content="https://rupumped.github.io/phishing.html">
+	<meta property="og:type" content="article">
 
 	<!-- Favicon -->
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
