--- a/phishing.html
+++ b/phishing.html
@@ -131,12 +131,11 @@
 			<p>Name your new file "index.html" to ensure it will be displayed by the browser when your "malware" site is live. Modify the following HTML script for your company, and copy-paste it into the "Edit new file" input box.</p>
 			<pre class="overflowable">
 <code>&lt;!DOCTYPE html&gt;
-&lt;html lang="en"&gt;
+&lt;html lang="en-US"&gt;
 &lt;head&gt;
 &lt;title&gt;You done messed up&lt;/title&gt;
-&lt;meta charset="UTF-8"&gt;
+&lt;meta charset="utf-8"&gt;
 &lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;
-&lt;META NAME="Handheld-Friendly" content="True"&gt;
 &lt;script src="https://smtpjs.com/v3/smtp.js"&gt;&lt;/script&gt;
 &lt;/head&gt;
 &lt;body&gt;
@@ -222,6 +221,8 @@ message =&gt; console.log(message)
 			<p>You may also want to create an internal report about how your company performed as a whole, including a plan to improve awareness and perform periodic testing.</p>
 
 			<p>Conducting phishing tests on your company's employees is a critical step in protecting your company's sensitive information and maintaining its cybersecurity defenses. While hiring third-party providers to conduct these tests can be expensive, you can run them for free using these steps. By preparing your company's employees, you can help to create a culture of awareness and vigilance around cybersecurity within your organization. By taking these proactive steps, you can minimize the risk of successful phishing attacks and ensure that your company's sensitive information remains secure. Remember, prevention is always better than cure, and the best defense against phishing attacks is an informed and alert workforce.</p>
+
+			<p><b>UPDATE:</b> When I ran this test the first time at my company, a majority of my colleagues failed the test. After making them all take the training module, I tested them again one year later, this time by replacing the suspicious link with a file attachment that my email requested them open and inspect urgently. <b>Not a single person opened the attachment.</b> Instead, almost everyone emailed me to check the email's authenticity, and a few made comments like "I do remember my training 😄" and "You gotta up your game with me, I'm way harder to trick than that!"</p>
 		</section>
 	</main>
 	
