--- a/phishing.html
+++ b/phishing.html
@@ -67,7 +67,7 @@
 
 	<main>
 		<h1>Phishing Prevention on a Budget: How to Test and Train Your Employees for Free</h1>
-		<p class="date">Posted on March 28, 2023</p>
+		<p class="date">Posted on March 28, 2023 • 10-minute read</p>
 		<figure class="cover">
 			<img src="blog-posts/phishing-cover.jpg" alt="Arm reaching out of an email to steal cash and credit cards">
 			<figcaption>Image CC0: Mohamed Hassan.</figcaption>
